// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<th
  className="cf-1h5acsr"
>
  TableHeadCell
</th>
`;

exports[`should render extra class name 1`] = `
<th
  className="extra"
>
  TableHeadCell
</th>
`;
